parallax fixed image effect on Project Detail heros

--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -375,7 +375,8 @@ select:-webkit-autofill:focus {
   width: 100vw;
   background-color: lightgrey;
   background-size: cover;
-  background-position: 50% 50%; }
+  background-position: 50% 50%;
+  background-attachment: fixed; }
 
 .ProjectDetail .text-container {
   /*@include border(blue);*/
