--- a/src/layout/Footer/Footer.css
+++ b/src/layout/Footer/Footer.css
@@ -280,7 +280,7 @@ select:-webkit-autofill:focus {
   height: 100%;
   width: 100%;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center; }
 
 .Footer {
