--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -6,6 +6,6 @@
 	height: 100%;
 	width: 100%;
 	background-repeat:no-repeat;
-	background-size:contain;
+	background-size:cover;
 	background-position:center;
 }
