--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -371,7 +371,8 @@ select:-webkit-autofill:focus {
   margin-top: 20px; }
 
 .ProjectDetail .project-detail-cover {
-  height: 400px;
+  height: 600px;
+  max-height: 70vh;
   width: 100vw;
   background-color: lightgrey;
   background-size: cover;
