--- a/src/pages/Projects/ProjectList.css
+++ b/src/pages/Projects/ProjectList.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* breakpoints */
 /* base units */
 /* z-index */
@@ -6,6 +7,7 @@
 /* footer */
 /* colors */
 /* buttons */
+/* Calculate fluid ratio based on two dimensions (width/height) */
 /*
 	* flex rows
 */
@@ -43,11 +45,11 @@
     -moz-flex-flow: column;
     -ms-flex-flow: column;
     flex-flow: column; }
-  .flex-row.responsive .half-span {
-    height: 50%;
-    width: 100%; }
-  .flex-row.responsive .third-span, .flex-row.responsive .two-third-span, .flex-row.responsive .quarter-span, .flex-row.responsive .three-quarter-span {
-    width: 100%; } }
+    .flex-row.responsive .half-span {
+      height: 50%;
+      width: 100%; }
+    .flex-row.responsive .third-span, .flex-row.responsive .two-third-span, .flex-row.responsive .quarter-span, .flex-row.responsive .three-quarter-span {
+      width: 100%; } }
 
 /*
 	* flex cols
@@ -140,33 +142,29 @@
 
 form {
   max-width: calc(100vw - 40px); }
-
-form input, form textarea {
-  color: #3c3c3c;
-  background-color: #fbfbfb;
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box; }
-
-form input, form textarea {
-  border: 2px solid black;
-  /*		border: 0;
+  form input, form textarea {
+    color: #3c3c3c;
+    background-color: #fbfbfb;
+    padding: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box; }
+  form input, form textarea {
+    border: 2px solid black;
+    /*		border: 0;
 		outline: 0;
 		background: transparent;
 		border-bottom: 3px solid black;*/ }
-
-form textarea {
-  width: 100%;
-  height: 150px;
-  line-height: 150%;
-  resize: vertical; }
-
-form button[type='submit'], form .button {
-  width: 100%; }
+  form textarea {
+    width: 100%;
+    height: 150px;
+    line-height: 150%;
+    resize: vertical; }
+  form button[type='submit'], form .button {
+    width: 100%; }
 
 /* buttons */
 .button, button[type='submit'] {
@@ -204,44 +202,41 @@ form button[type='submit'], form .button {
   -moz-transition: all 350ms ease;
   -ms-transition: all 350ms ease;
   -o-transition: all 350ms ease; }
-
-.button:hover, button[type='submit']:hover {
-  background-color: white;
-  color: black; }
-
-.button.transparent, button[type='submit'].transparent {
-  background-color: transparent;
-  color: black;
-  cursor: pointer;
-  text-decoration: underline;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: row;
-  -moz-flex-flow: row;
-  -ms-flex-flow: row;
-  flex-flow: row;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-  padding: 13.33333px;
-  cursor: pointer;
-  text-decoration: underline;
-  border: 2px solid black;
-  text-decoration: none;
-  text-transform: uppercase; }
-
-.button.transparent:hover, button[type='submit'].transparent:hover {
-  background-color: rgba(255, 255, 255, 0);
-  color: black; }
+  .button:hover, button[type='submit']:hover {
+    background-color: white;
+    color: black; }
+  .button.transparent, button[type='submit'].transparent {
+    background-color: transparent;
+    color: black;
+    cursor: pointer;
+    text-decoration: underline;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row;
+    -moz-flex-flow: row;
+    -ms-flex-flow: row;
+    flex-flow: row;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center;
+    padding: 13.33333px;
+    cursor: pointer;
+    text-decoration: underline;
+    border: 2px solid black;
+    text-decoration: none;
+    text-transform: uppercase; }
+    .button.transparent:hover, button[type='submit'].transparent:hover {
+      background-color: rgba(255, 255, 255, 0);
+      color: black; }
 
 /* Change Autocomplete styles in Chrome*/
 input:-webkit-autofill,
@@ -301,46 +296,40 @@ select:-webkit-autofill:focus {
 .ProjectListItem {
   cursor: pointer;
   max-width: 100vw; }
-
-.ProjectListItem.list-style {
-  display: block;
-  height: auto;
-  width: auto; }
-
-.ProjectListItem.list-style .bg-img {
-  background-image: none !important; }
-
-.ProjectListItem.list-style .text .project-name {
-  font-size: 1em; }
-
-.ProjectListItem.list-style .text .project-type {
-  display: none; }
-
-.ProjectListItem.box-style {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: column;
-  -moz-flex-flow: column;
-  -ms-flex-flow: column;
-  flex-flow: column;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-  width: 560px;
-  height: 350px; }
-
-.ProjectListItem.box-style .text {
-  text-align: center;
-  margin-top: 10px; }
+  .ProjectListItem.list-style {
+    display: block;
+    height: auto;
+    width: auto; }
+    .ProjectListItem.list-style .bg-img {
+      background-image: none !important; }
+    .ProjectListItem.list-style .text .project-name {
+      font-size: 1em; }
+    .ProjectListItem.list-style .text .project-type {
+      display: none; }
+  .ProjectListItem.box-style {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: column;
+    -moz-flex-flow: column;
+    -ms-flex-flow: column;
+    flex-flow: column;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center;
+    width: 560px;
+    height: 350px; }
+    .ProjectListItem.box-style .text {
+      text-align: center;
+      margin-top: 10px; }
 
 .ProjectDetail {
   display: -webkit-box;
@@ -362,37 +351,85 @@ select:-webkit-autofill:focus {
   justify-content: center;
   -ms-flex-pack: center;
   margin-bottom: 20px; }
+  .ProjectDetail img {
+    width: 100%;
+    max-width: 100vw;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 20px; }
+  .ProjectDetail .project-detail-cover {
+    height: 600px;
+    max-height: 70vh;
+    width: 100vw;
+    background-color: lightgrey;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-attachment: fixed; }
+  .ProjectDetail .project-screenshots {
+    border: 1px dashed red;
+    max-width: 100vw;
+    /*		.desktop-aspect-ratio {
+			@include aspect-ratio(566, 537);
+		}
+		.laptop-aspect-ratio {
+			@include aspect-ratio(488, 307);
+		}
+		.tablet-aspect-ratio {
+			@include aspect-ratio(246, 400);
 
-.ProjectDetail img {
-  width: 100%;
-  max-width: 100vw;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 20px; }
+		}
+		.phone-aspect-ratio {
+			@include aspect-ratio(95, 196);
 
-.ProjectDetail .project-detail-cover {
-  height: 600px;
-  max-height: 70vh;
-  width: 100vw;
-  background-color: lightgrey;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-attachment: fixed; }
+		}*/
+    /*		.screenshot {
+			background-size: cover;
 
-.ProjectDetail .text-container {
-  /*@include border(blue);*/
-  -webkit-align-items: flex-start;
-  -moz-align-items: flex-start;
-  -ms-align-items: flex-start;
-  align-items: flex-start;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center; }
-
-.ProjectDetail .text-container .button {
-  margin-top: 20px; }
+			&.desktop {	
+				background-image: url('/frames/desktop.png');	// 566 × 537
+				width: 566px;
+			    height: 538px;
+			}
+			&.laptop {
+				background-image: url('/frames/laptop.png');
+			    width: 477px;
+			    height: 307px;
+			}
+			&.tablet {
+				background-image: url('/frames/tablet.png');
+				width: 246px;
+			    height: 400px;
+			}
+			&.phone {
+				background-image: url('/frames/phone.png');
+			    width: 95px;
+			    height: 196px;
+			}
+		}
+*/ }
+    .ProjectDetail .project-screenshots figure.fluidratio {
+      /* This element will have fluid ratio from 4:1 at 800px to 2:1 at 300px. */
+      padding-top: 10%;
+      height: 120px;
+      background-size: cover;
+      -moz-background-size: cover;
+      /* Firefox 3.6 */
+      background-position: center;
+      /* Internet Explorer 7/8 */
+      background-image: url(http://voormedia.com/examples/amsterdam.jpg); }
+  .ProjectDetail .text-container {
+    /*@include border(blue);*/
+    -webkit-align-items: flex-start;
+    -moz-align-items: flex-start;
+    -ms-align-items: flex-start;
+    align-items: flex-start;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+    -ms-flex-pack: center; }
+    .ProjectDetail .text-container .button {
+      margin-top: 20px; }
 
 /* 640px or bigger */
 @media only screen and (min-width: 769px) {
@@ -415,15 +452,15 @@ select:-webkit-autofill:focus {
     -ms-justify-content: center;
     justify-content: center;
     -ms-flex-pack: center; }
-  .ProjectList ul.project-list li .ProjectListItem.list-style .text .project-name {
-    border-right: 1px solid black;
-    padding: 0 20px; }
-  .ProjectList ul.project-list li:last-child .ProjectListItem.list-style .text .project-name {
-    border-right: none; }
+    .ProjectList ul.project-list li .ProjectListItem.list-style .text .project-name {
+      border-right: 1px solid black;
+      padding: 0 20px; }
+    .ProjectList ul.project-list li:last-child .ProjectListItem.list-style .text .project-name {
+      border-right: none; }
   .ProjectListItem {
     padding: 5px 0; }
-  .ProjectListItem.box-style {
-    margin: 10px; }
+    .ProjectListItem.box-style {
+      margin: 10px; }
   .ProjectDetail .text-container .text#ProjectDescription {
     /*width: 75%;*/
     margin-right: 20px; }
@@ -459,5 +496,5 @@ select:-webkit-autofill:focus {
     margin-top: 10px; }
   .ProjectListItem.box-style {
     margin-bottom: 20px; }
-  .ProjectListItem.box-style .text {
-    padding: 5px; } }
+    .ProjectListItem.box-style .text {
+      padding: 5px; } }
