--- a/src/components/ImageLoader/ImageLoader.scss
+++ b/src/components/ImageLoader/ImageLoader.scss
@@ -1,5 +1,14 @@
 @import '../../styles/_all';
 
+.image-loader {
+	background: $grey;
+}
+
+
+
+
+
+
 .loader,
 .loader:after {
 	border-radius: 50%;
