--- a/src/pages/Projects/ProjectList.scss
+++ b/src/pages/Projects/ProjectList.scss
@@ -23,7 +23,7 @@ $project_tile_height: 350px;
 		height: auto;
 		width: auto;
 		.bg-img {
-			background-image: none !important;
+			display: none !important;
 		}
 		.text {
 			.project-name {
