--- a/src/components/ImageLoader/ImageLoader.css
+++ b/src/components/ImageLoader/ImageLoader.css
@@ -285,31 +285,42 @@ select:-webkit-autofill:focus {
   background-position: center; }
 
 .image-loader {
-  background: #333; }
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: column;
+  -moz-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center; }
 
-.loader,
-.loader:after {
+.spinner,
+.spinner:after {
   border-radius: 50%;
   width: 50px;
   height: 50px; }
 
-.loader {
+.spinner {
   margin: 0px auto;
-  font-size: 10px;
-  position: relative;
-  text-indent: -9999em;
   z-index: 999999999;
-  border-top: 5px solid rgba(255, 255, 255, 0);
+  border-top: 5px solid #333;
   border-right: 5px solid rgba(255, 255, 255, 0);
   border-bottom: 5px solid rgba(255, 255, 255, 0);
   border-left: 5px #333;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: loaderAnim 1.1s infinite linear;
-  animation: loaderAnim 1.1s infinite linear; }
+  -webkit-animation: spinnerAnim 1.1s infinite linear;
+  animation: spinnerAnim 1.1s infinite linear; }
 
-@keyframes loaderAnim {
+@keyframes spinnerAnim {
   0% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg); }
