--- a/src/components/ImageLoader/ImageLoader.scss
+++ b/src/components/ImageLoader/ImageLoader.scss
@@ -1,41 +1,28 @@
 @import '../../styles/_all';
 
 .image-loader {
-	background: $grey;
+	@include flexbox-center(column);
 }
-
-
-
-
-
-
-.loader,
-.loader:after {
+.spinner,
+.spinner:after {
 	border-radius: 50%;
 	width: 50px;
 	height: 50px;
 }
-.loader {
+.spinner {
 	margin: 0px auto;
-	font-size: 10px;
-	position: relative;
-	text-indent: -9999em;
 	z-index: 999999999;
 
-	border-top: 5px solid rgba(255, 255, 255, 0);
+	border-top: 5px solid $grey;
 	border-right: 5px solid rgba(255, 255, 255, 0);
 	border-bottom: 5px solid rgba(255, 255, 255, 0);
 	border-left: 5px $grey;
 
-	-webkit-transform: translateZ(0);
-	-ms-transform: translateZ(0);
-	transform: translateZ(0);
-
-	-webkit-animation: loaderAnim 1.1s infinite linear;
-	animation: loaderAnim 1.1s infinite linear;
+	-webkit-animation: spinnerAnim 1.1s infinite linear;
+	animation: spinnerAnim 1.1s infinite linear;
 }
 
-@keyframes loaderAnim {
+@keyframes spinnerAnim {
 	0% {
 		-webkit-transform: rotate(0deg);
 		transform: rotate(0deg);
