ImageLoader CSS fade out transition

--- a/src/components/ImageLoader/ImageLoader.css
+++ b/src/components/ImageLoader/ImageLoader.css
@@ -326,7 +326,8 @@ select:-webkit-autofill:focus {
   height: 100%;
   width: 100%;
   opacity: 1;
-  transition: all 350ms ease; }
+  background: white;
+  transition: all 700ms ease; }
 
 .spinner-container.loaded {
   opacity: 0; }
