--- a/src/layout/Nav/Nav.scss
+++ b/src/layout/Nav/Nav.scss
@@ -1,7 +1,7 @@
 @import '../../styles/_all';
 
 .Nav {
-	z-index: $top;
+	z-index: $ultimate_top;
 	@include transition(all $transition_speed ease);
 	background-color: white;
 	position: fixed;
