--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,9 +1,9 @@
 @import '../../styles/_all';
 
 .Home {
-	/*@include flexbox-center(column);*/
 	.home-container {
-		height: 100%;
+		min-height: calc(100vh - #{$fixed_nav_height});
+		@include flexbox-center(column);
 		svg {
 			width: 100px;
 			height: 100px;
