organize Footer & Nav into /components folder; add _responsive.scss rules + Responsive.js component

--- a/src/styles/_all.scss
+++ b/src/styles/_all.scss
@@ -1,7 +1,8 @@
 @import '_variables';
-@import '_flexbox';
+@import '_responsive';
 @import '_mixins';
+@import '_flexbox';
 @import '_layout';
-@import '_forms';
-@import '_colors';
 @import '_core';
+@import '_colors';
+@import '_forms';
