--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -52,15 +52,13 @@ select:-webkit-autofill:focus {
 	transition: background-color 5000s ease-in-out 0s;
 }
 
-/* 640px or bigger */
-@media only screen and (min-width : $breakpoint) {
+@media #{$desktop} {
 	form {
 		min-width: 500px;
 	}
 }
 
-/* 769px or smaller */
-@media only screen and (max-width : $breakpoint) {
+@media #{$tablet} {
 	form {
 		width: 100%;
 	}
