--- a/src/views/Resume/Resume.scss
+++ b/src/views/Resume/Resume.scss
@@ -34,8 +34,7 @@
 	}
 }
 
-/* 640px or bigger */
-@media only screen and (min-width : $breakpoint) {
+@media #{$desktop} {
 	.Resume {
 		.resume-container {
 			.resume-section {
@@ -64,8 +63,7 @@
 	}
 }
 
-/* 769px or smaller */
-@media only screen and (max-width : $breakpoint) {
+@media #{$tablet} {
 	.Resume {
 		.resume-container {
 			.resume-section {
