--- a/src/components/ImageLoader/ImageLoader.css
+++ b/src/components/ImageLoader/ImageLoader.css
@@ -349,3 +349,8 @@ select:-webkit-autofill:focus {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
+(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
