--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -354,3 +354,11 @@ h1.center, h2.center, h3.center, h4.center, p.center, small.center, .title.cente
 
 .underline {
   text-decoration: underline; }
+percase; }
+
+.bold {
+  /*font-weight: bold;*/
+  font-family: 'RobotoBold'; }
+
+.underline {
+  text-decoration: underline; }
