--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -67,10 +67,12 @@
 
 /* basic layouts + padded widths */
 .left-col {
+	background: pink;
 	margin-right: $gutter*2;
 	width: 20%;
 }
 .right-col {
+	background: yellow;
 	margin-left: $gutter*2;
 	width: 80%;
 }
