--- a/src/views/Contact/Contact.css
+++ b/src/views/Contact/Contact.css
@@ -112,10 +112,12 @@
 
 /* basic layouts + padded widths */
 .left-col {
+  background: pink;
   margin-right: 40px;
   width: 20%; }
 
 .right-col {
+  background: yellow;
   margin-left: 40px;
   width: 80%; }
 
