--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -112,10 +112,12 @@
 
 /* basic layouts + padded widths */
 .left-col {
+  background: pink;
   margin-right: 40px;
   width: 20%; }
 
 .right-col {
+  background: yellow;
   margin-left: 40px;
   width: 80%; }
 
@@ -272,35 +274,4 @@ select:-webkit-autofill:focus {
     width: 100%; } }
 
 .Home .home-container {
-  min-height: calc(100vh - 60px);
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: column;
-  -moz-flex-flow: column;
-  -ms-flex-flow: column;
-  flex-flow: column;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center; }
-  .Home .home-container svg {
-    width: 100px;
-    height: 100px; }
-
-@media only screen and (min-width: 1025px) {
-  .Home .home-container svg {
-    position: fixed;
-    top: 100px;
-    left: 100px; } }
-
-@media only screen and (max-width: 1024px) {
-  .Home .home-container {
-    text-align: center; } }
+  min-height: calc(100vh - 60px); }
